--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body, html {
   position: fixed;
   top: 20px;
   right: 20px;
-  z-index: 1001;
+  z-index: 10010;
 }
 
 .navbar-toggler {
@@ -107,14 +107,30 @@ body, html {
 
 .parallax .content {
   position: relative;
+  width: 40%;
   z-index: 2;
   text-align: center;
 }
 
 .parallax h1,
+.parallax h2,
 .parallax p {
   opacity: 0;
   color: white; /* 白文字を設定 */
+}
+
+.parallax h1 {
+  writing-mode: vertical-rl;
+  font-size: 5.5rem;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.parallax p {
+  writing-mode: vertical-rl;
+  font-size: 2rem;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .fade-in {
