--- a/css/style.scss
+++ b/css/style.scss
@@ -11,7 +11,7 @@ body, html {
     position: fixed;
     top: 20px;
     right: 20px;
-    z-index: 1001;
+    z-index: 10010;
 }
 
 .navbar-toggler {
@@ -105,15 +105,34 @@ body, html {
 
 .parallax .content {
     position: relative;
+    width: 40%;
     z-index: 2;
     text-align: center;
 }
 
 .parallax h1,
+.parallax h2,
 .parallax p {
     opacity: 0;
     color: white; /* 白文字を設定 */
 }
+
+.parallax h1 {
+    -ms-writing-mode: tb-rl;
+    writing-mode: vertical-rl;
+    font-size: 5.5rem;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.parallax p {
+    -ms-writing-mode: tb-rl;
+    writing-mode: vertical-rl;
+    font-size: 2rem;
+    margin-right: auto;
+    margin-left: auto;
+}
+
 
 .fade-in {
     animation: fadeIn ease 2s forwards;
