--- a/css/style.css
+++ b/css/style.css
@@ -239,7 +239,145 @@ section {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='red' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
 
-/* 他のセクションの色も同様に設定可能 */
+.husen_img1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.husen_img1 img {
+  width: 50%;
+  height: auto;
+}
+
+.husen_img2 img {
+  width: 80%;
+  height: auto;
+}
+
+.cast {
+  text-align: center;
+}
+
+.cast ul {
+  list-style: none;
+}
+
+.staff {
+  text-align: center;
+}
+
+.staff ul {
+  list-style: none;
+}
+
+/* フォトフレームのスタイル */
+#flyer-section img {
+  border: 10px solid #fff; /* 白いフレーム */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* 影 */
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  cursor: pointer;
+}
+
+#flyer-section img:hover {
+  transform: scale(1.05); /* 少し拡大して浮き上がる効果 */
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4); /* 影を強化 */
+}
+
+/* モーダルウィンドウのスタイル */
+#flyer-modal {
+  display: none; /* 初期状態は非表示 */
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8); /* 半透明の背景 */
+}
+
+#flyer-modal img {
+  display: block;
+  max-width: 90%;
+  max-height: 90%;
+  margin: auto;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+#flyer-modal:target {
+  display: block; /* クリックで表示 */
+}
+
+/* ボタン全体の外枠指定 */
+.snsbtniti {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  max-width: 350px; /* ボタンを設置する場所の最大横幅 */
+  margin: 0 auto; /* ボタンを中央へ */
+}
+
+/* ulタグの内側余白なしと箇条書きの黒丸削除 */
+ul.snsbtniti {
+  padding: 0 !important;
+  list-style-type: none !important;
+}
+
+/* ボタン同士の余白調整 */
+.snsbtniti li {
+  flex: 0 0 33%; /* ボタンを3つ並びへ */
+  text-align: center !important;
+}
+
+/* ボタン全体 */
+.flowbtn {
+  font-family: "Noto Sans Japaneses", sans-serif; /* フォント指定 */
+  position: relative;
+  display: inline-block;
+  width: 75px; /* 背景横幅 */
+  height: 65px; /* 背景高さ */
+  font-size: 30px; /* アイコンサイズ */
+  border-radius: 4px;
+  color: #fff !important; /* ボタン内カラー */
+  transition: 0.5s;
+  text-decoration: none;
+  box-shadow: 0 1px 2px #999;
+  margin-bottom: 10px; /* ボタン下余白 */
+}
+
+/* アイコンの位置を少し下げる */
+.flowbtn i {
+  position: relative;
+  top: 5px;
+}
+
+/* ボタン内テキスト調整 */
+.flowbtn div {
+  font-size: 12px;
+  font-weight: bold;
+  letter-spacing: 0;
+}
+
+/* ボタンマウスホバー時少し浮き上がる */
+.flowbtn:hover {
+  transform: translateY(-5px);
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/* インスタ・Amazonのアイコンを少し大きく */
+.flowbtn i.fa-brands.fa-instagram, .flowbtn i.fa-brands.fa-amazon {
+  font-size: 35px;
+}
+
+/* エックス背景 */
+.my_x1 {
+  background: #000;
+}
+
 /* レスポンシブデザイン */
 @media (max-width: 768px) {
   .navbar-nav .nav-link {
