--- a/css/style.scss
+++ b/css/style.scss
@@ -329,6 +329,9 @@ section {
 
 .cast ul {
     list-style: none;
+    text-align: center;
+    padding: 0;
+    margin: 0;
 }
 
 .cast ul li {
@@ -346,6 +349,9 @@ section {
 
 .staff ul {
     list-style: none;
+    text-align: center;
+    padding: 0;
+    margin: 0;
 }
 
 .staff ul li {
@@ -417,7 +423,6 @@ section {
     .flowbtn2 div {
     font-size: 12px;
     font-weight: bold;
-    letter-spacing: 0;
     }
     
     /* マウスホバー時、ボタン内を白に指定 */
