--- a/css/style.css
+++ b/css/style.css
@@ -313,6 +313,7 @@ section {
 
 .cast {
   text-align: center;
+  margin-bottom: 40px;
 }
 
 .cast h2 {
@@ -328,7 +329,7 @@ section {
 }
 
 .cast ul li {
-  font-size: clamp(20px, 2vw, 30px);
+  font-size: clamp(20px, 1.8vw, 30px);
 }
 
 .staff {
@@ -348,7 +349,7 @@ section {
 }
 
 .staff ul li {
-  font-size: clamp(20px, 2vw, 30px);
+  font-size: clamp(20px, 1.8vw, 30px);
 }
 
 /* フォトフレームのスタイル */
